fix issue with terpenes form

--- a/templates/terpene_profile.html
+++ b/templates/terpene_profile.html
@@ -15,7 +15,7 @@
         <div class="col-lg-4">
             {% if not terp %}
             <h4 class="h4">Terpene Profile for batch ID: {{ batch_id }} does not
-                exist.<br> <small>Create a new one <a href="#">here</a></small></h4>
+                exist.<br> <small>Create a new one <a href="{% url 'terpenes-form' batch_id=batch_id %}">here</a></small></h4>
             {% else %}
             <img src="{{ terp.0.get_batch.image.url }}" class="profile-img">
         </div>
