--- a/templates/terpene_profile.html
+++ b/templates/terpene_profile.html
@@ -25,6 +25,7 @@
             <div class="profile-title">
                 <h2 class="display-2">{{ terp.0.get_batch.strain.name }}</h2>
                 <h5 class="h5"><strong>THC:</strong> {{ terp.0.get_batch.thc_content }}%</h5>
+                <h5 class="h5"><strong>Species:</strong> {{terp.0.get_batch.strain.family }}</h5>
                 <h5 class="h5">{{ terp.0.get_batch.grower.name }}, Harvest Date: {{terp.0.get_batch.harvest_date }}</h5>
             </div>
 
