--- a/templates/rating_form.html
+++ b/templates/rating_form.html
@@ -4,24 +4,33 @@
 {% block title %}Rating{% endblock %}
 
 {% block content %}
-<div class="row">
-    <div class="col-md-4"></div>
-    <div class="col-md-8">
-        <div class="form-container">
-            <form method="post" class="form-inline">{% csrf_token %}
-                <div class="form-group">
-                    <h4 class="form-title">Rate</h4>
-                    {{ form.as_p }}
-                    <input type="submit" class="btn btn-primary" value="Submit">
-                </div>
-            </form>
+<div class="form-container">
+    <div class="row">
+        <div class="col-sm-4 col-md-4"></div>
+        <div class="col-sm-2 col-md-8">
+            <div class="form-group">
+                <h4 class="h4">Rate Deez Nuts</h4>
+
+                <form method="post">{% csrf_token %}
+                    <p>{{form.batch.label}}{{form.batch}}
+                    <span>
+                        <small><a href="{% url 'batch-form' %}">New</a>
+                        </small>
+                    </span>
+                    </p>
+
+                    <p>{{form.score.label}}{{form.score}}</p>
+
+                    <input type="submit" value="Submit" class="btn btn-primary">
+                </form>
+                {% if messages %}
+                {% for message in messages %}
+                <p>{{ message }}</p>
+                {% endfor %}
+                {% endif %}
+            </div>
         </div>
-        <br>
-        {% if messages %}
-        {% for message in messages %}
-        <strong>{{ message }}</strong>
-        {% endfor %}
-        {% endif %}
+        <div class="col-sm-2 col-md-2 col-sm-2"></div>
     </div>
 </div>
 {% endblock %}
